src/test/deca/context/invalid/created/test_bool_invalid.deca
{
    boolean b;
    // Erreur : 1 n'est pas un booléen
    b = true && 1; 
}